<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help_ex1">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entendi"
        style="@style/Button2"
        android:layout_marginBottom="20dp"
        android:text="@string/entendi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/texto1"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/t1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/um_oitavo"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:src="@drawable/im1"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="@id/texto1"
        app:layout_constraintStart_toStartOf="@id/texto1"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/texto2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:text="@string/t2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/um_oitavo" />

    <TextView
        android:id="@+id/ex"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="30dp"
        android:text="@string/exemplo"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/texto2" />

    <TextView
        android:id="@+id/texto3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/t3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ex" />

    <ImageView
        android:id="@+id/bolo"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:src="@drawable/im2"
        android:layout_marginTop="115dp"
        app:layout_constraintEnd_toEndOf="@id/texto3"
        app:layout_constraintStart_toStartOf="@id/texto3"
        app:layout_constraintTop_toTopOf="@id/texto3"/>

</androidx.constraintlayout.widget.ConstraintLayout>