<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iconeUser"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_user_white"
        app:layout_constraintBottom_toBottomOf="@+id/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="90dp"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_niveis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="330dp"
        android:text="@string/selecione"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/container_niveis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_niveis">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_nivel1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fracao"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/fracao"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="end"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/n1_red"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="start"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_nivel2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fracao"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/fracao"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="end"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/n2_red"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="start"/>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_nivel3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/em_breve"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"

                        android:layout_gravity="center"/>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>